tried to fix mobille version alignment issue

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 .Links a{
   text-decoration: none;
   color: black;
-  margin: 0px 6px;
+  margin: 4% 2%;
 
 }
 .Links{
